# SFF_macOS

./: .gitignore  CHANGELOG.md  Main_gui.py  README.md  build_sff.spec  build_sff_gui.spec  build_sff_linux.spec  installer.nsi  macos_adjustments.patch  release-note.md  requirements-linux.txt  requirements.txt
.github/workflows/: build-installer.yml  release.yml
LumaCore/: README.md  build.bat  lumacore.toml.example
LumaCore/docs/: LumaCore.md
LumaCore/source/: CMakeLists.txt
LumaCore/source/cmake/: LcDetours.cmake  LcFetchCache.cmake  LcLogMacros.cmake  LcLua.cmake  LcProtobuf.cmake  LcSpdlog.cmake  LcTomlplusplus.cmake
LumaCore/source/config/: LuaBindings.cpp  LuaLoader.h  LuaLoaderInternal.h  LuaQuery.cpp  LuaState.cpp  Settings.cpp  Settings.h
LumaCore/source/core/: Orchestrator.cpp  Orchestrator.h  entry.cpp  entry.h
LumaCore/source/hooks/: Macros.h  PackagePatch.cpp  PacketRouter.cpp  PatternFetcher.cpp  PatternFetcher.h  SteamUI.cpp
LumaCore/source/hooks/capture/: RuntimeCapture.cpp  RuntimeCapture.h  SteamCapture.h
LumaCore/source/hooks/client/: AsyncTicketMap.cpp  AsyncTicketMap.h  AuthWindow.cpp  AuthWindow.h  CmdUser.cpp  CmdUser.h  CmdUtils.cpp  CmdUtils.h  DecryptionKeyHook.cpp  DecryptionKeyHook.h  DenuvoAuthenticator.cpp  DenuvoAuthenticator.h  DepotKeys.cpp  DepotKeys.h  IPCBus.cpp  IPCBus.h  IpcDispatch.cpp  IpcDispatch.h  IpcHandlers_ISteamUser.cpp  IpcHandlers_ISteamUtils.cpp  IpcHooks.cpp  IpcHooks.h  IpcMethodLoader.cpp  IpcMethodLoader.h  KeyValues.cpp  KeyValues.h  LicenseHooks.cpp  LicenseHooks.h  ManifestBind.cpp  ManifestBind.h  ManifestOverride.cpp  ManifestOverride.h  NetPacket.cpp  NetPacket.h  NetPacket_AccessToken.cpp  NetPacket_AccessToken.h  NetPacket_ETicket.cpp  NetPacket_ETicket.h  NetPacket_FamilySharing.cpp  NetPacket_FamilySharing.h  (+23 more)
LumaCore/source/hooks/ui/: StatusWriter.cpp  StatusWriter.h  SteamUI.cpp  SteamUI.h
LumaCore/source/patterns/: ByteScan.cpp  ByteScan.h  PatternFetcher.cpp  PatternFetcher.h  PatternSig.cpp
LumaCore/source/payload/LumaCorePayload/: EpicOnlineBridge.cpp  EpicOnlineBridge.h  EpicOnlineTypes.h  LcPayloadLogging.cpp  LcPayloadLogging.h  LumaCorePayloadEntry.cpp  PayloadPropagator.cpp  PayloadPropagator.h  RemoteDllDeploy.h
LumaCore/source/proxy/: LcDwmProxy.cpp  LcDwmProxy.def  LcXInputProxy.cpp  LcXInputProxy.def
LumaCore/source/runtime/: BootDiag.cpp  BootDiag.h  ClockMark.h  CredentialStore.cpp  CredentialStore.h  Diagnostics.cpp  Diagnostics.h  DirWatch.cpp  DirWatch.h  EticketFetcher.cpp  EticketFetcher.h  HookStatus.cpp  HookStatus.h  IntegrityScanner.cpp  IntegrityScanner.h  IpcSpecLoader.cpp  IpcSpecLoader.h  LcFnvHash.h  LibraryInjector.cpp  LibraryInjector.h  Logger.cpp  Logger.h  ManifestFetch.cpp  ManifestFetch.h  ModuleLog.h  ProcessInspect.cpp  ProcessInspect.h  ProtectionProbe.cpp  ProtectionProbe.h  RemoteTools.cpp  RemoteTools.h  RuntimeHttp.cpp  RuntimeHttp.h  Ticket.cpp  Ticket.h  TicketProvider.cpp  TicketProvider.h  VehUtil.cpp  VehUtil.h
LumaCore/source/steam/: Enums.h  Types.h
LumaCore/source/utils/: DirWatch.cpp  LuaBindings.cpp  LuaLoader.h  LuaLoaderInternal.h  LuaQuery.cpp  LuaState.cpp  ManifestFetch.cpp  PatternSig.cpp  PatternSig.h  RuntimeHttp.cpp  RuntimeHttp.h  Settings.cpp  Settings.h
docs/: Third-party notices.md
sff/: __init__.py  cloud_save_paths.py  cloud_saves.py  depot_downloader.py  download_manager.py  fzf.py  game_list_fallback.py  game_specific.py  google_drive.py  http_utils.py  let_update_override.py  lumacore_setup.py  online_fix.py  processes.py  prompts.py  registry_access.py  secret_store.py  single_instance.py  steam_client.py  steam_path.py  steamauto.py  store_browser.py  strings.py  structs.py  ui.py  update_prompt_override.py  utils.py  zip.py
sff/app_injector/: lumacore.py
sff/dlc_unlockers/: validation.py
sff/fix_game/: cache.py  goldberg_applier.py  goldberg_updater.py  steamstub_unpacker.py
sff/gui/: bulk_import.py  fix_game_tab.py  main_window.py  store_tab.py  web_bridge.py  workshop_browser.py
sff/home/: workshop_auto_apply.py
sff/linux/: slssteam.py
sff/locales/: _allowlist.json  de.json  es.json  id.json  pt.json  webui_cs.json  webui_de.json  webui_en.json  webui_es.json  webui_fr.json  webui_it.json  webui_pl.json  webui_pt.json
sff/lua/: choices.py  dlc_appid_enricher.py  endpoints.py  generator.py  manager.py  provider.py  update_pins.py
sff/lumacore/: auto_setup.py  status_banner.py
sff/manifest/: crypto.py  depot_history.py  downloader.py  id_resolver.py  ugc_resolver.py  update_check.py
sff/quick_tools/: steam_updates.py
sff/storage/: acf.py  ini_config.py  named_ids.py  settings.py  vdf.py  yaml.py
sff/store/: __init__.py  ddmod_launcher.py  older_version.py
sff/tools/: __init__.py
sff/webui/: index.html
sff/webui/css/: animations.css  cards.css  main.css
sff/webui/js/: app.js  bridge.js  bulk_import.js  cloudsaves.js  components.js  dlc_check.js  library.js  settings.js  store.js
store_metadata/: dlc_appid.json  software_appid.json
